# Kornal

./: .gitignore  Cargo.toml  README.md  server.py
.cargo/: config.toml
src/: aht20.rs  lcd1602a.rs  lib.rs  main.rs
