[package]
name = "kornal"
version = "0.1.0"
authors = ["Yasiru Dharmathilaka <yasiru.dharmathilaka@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[dependencies]
esp-hal = { version = "0.18.0", features = ["esp32"] }
esp-backtrace = { version = "0.12.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.1", features = ["esp32", "uart"] }
# anyhow = "1.0.86"
embedded-hal = "1.0.0"
